--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   google_fonts: ^3.0.1
   intl: ^0.17.0
   flutter_svg: ^1.1.1+1
+  badges: ^2.0.3
 
 dev_dependencies:
   flutter_test:
