--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   intl: ^0.17.0
   flutter_svg: ^1.1.1+1
   badges: ^2.0.3
+  flutter_slidable: ^1.3.0
 
 dev_dependencies:
   flutter_test:
