--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,11 @@ dependencies:
   flutter_svg: ^1.1.1+1
   badges: ^2.0.3
   flutter_slidable: ^1.3.0
+  http: ^0.13.4
+  json_serializable: ^6.3.1
+  json_annotation: ^4.6.0
+  build_runner: ^2.2.0
+  provider: ^6.0.3
 
 dev_dependencies:
   flutter_test:
